--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "firebase/php-jwt": "^6.10",
-        "lexik/jwt-authentication-bundle": "3.0",
+        "lexik/jwt-authentication-bundle": "^3.0",
         "nelmio/cors-bundle": "^2.4",
         "symfony/asset": "7.0.*",
         "symfony/console": "7.0.*",
