--- a/config/services.yaml
+++ b/config/services.yaml
@@ -20,5 +20,12 @@ services:
             - '../src/Entity/'
             - '../src/Kernel.php'
 
+    App\Services\SendData:
+        arguments:
+            $apiKey: '%env(resolve:API_KEY)%'
+            $params: '@parameter_bag'
+            $client: '@http_client'
+            $logger: '@logger'
+
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
