--- a/config/services.yaml
+++ b/config/services.yaml
@@ -10,7 +10,8 @@ services:
     _defaults:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
-
+        bind: 
+                string $apiUrl: '%env(resolve:API_URL)%'
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
     App\:
@@ -26,6 +27,7 @@ services:
             $params: '@parameter_bag'
             $client: '@http_client'
             $logger: '@logger'
+
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
